tests/sksl/errors/golden/BadModifiers.glsl
### Compilation failed:

error: 3: 'const' is not permitted here
error: 3: 'in' is not permitted here
error: 3: 'out' is not permitted here
error: 3: 'uniform' is not permitted here
error: 3: 'flat' is not permitted here
error: 3: 'noperspective' is not permitted here
error: 3: 'readonly' is not permitted here
error: 3: 'writeonly' is not permitted here
error: 3: 'coherent' is not permitted here
error: 3: 'volatile' is not permitted here
error: 3: 'restrict' is not permitted here
error: 3: 'buffer' is not permitted here
error: 3: '__pixel_localEXT' is not permitted here
error: 3: '__pixel_local_inEXT' is not permitted here
error: 3: '__pixel_local_outEXT' is not permitted here
error: 3: 'varying' is not permitted here
error: 7: 'const' is not permitted here
error: 7: 'uniform' is not permitted here
error: 7: 'flat' is not permitted here
error: 7: 'noperspective' is not permitted here
error: 7: 'readonly' is not permitted here
error: 7: 'writeonly' is not permitted here
error: 7: 'coherent' is not permitted here
error: 7: 'volatile' is not permitted here
error: 7: 'restrict' is not permitted here
error: 7: 'buffer' is not permitted here
error: 7: 'sk_has_side_effects' is not permitted here
error: 7: '__pixel_localEXT' is not permitted here
error: 7: '__pixel_local_inEXT' is not permitted here
error: 7: '__pixel_local_outEXT' is not permitted here
error: 7: 'varying' is not permitted here
error: 7: 'inline' is not permitted here
error: 11: 'in uniform' variables only permitted within fragment processors
error: 11: 'varying' is only permitted in runtime effects
error: 11: 'sk_has_side_effects' is not permitted here
error: 11: 'inline' is not permitted here
36 errors
